--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style/normalize.css">
+    <title>Juego de Aprendizaje de Inglés</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>L_L_Game</title>
 </head>
 <body>
-    <p>Hello</p>
+    <div class="container">
+        <div class="border border-primary mt-5 bg-info rounded">  
+            <h1 class="text-center mt-5">WORDPLAY</h1>
+            <p>Select the correct word</p>
+            <div id="pregunta">
+            <!-- Aquí mostrarás las preguntas -->
+            </div>
+            <div id="opciones">
+            <!-- Aquí mostrarás las opciones de respuesta -->
+            </div>
+            <button id="siguiente">Siguiente</button>
+            <button id="reiniciar" style="display: none;">Reiniciar</button>
+            <div id="resultado">
+            <!-- Aquí mostrarás el resultado del juego -->
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  
+    
+    <script src="./script/index.js"></script>
 
-    <script src="/script/index.js"></script>
 </body>
 </html>
